<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="ru.kostry.app.ui.view.MainFragment"
        android:label="@string/label_main_frgment"
        tools:layout="@layout/main_fragment" >
        <action
            android:id="@+id/action_mainFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
    </fragment>
    <fragment
        android:id="@+id/firstFragment"
        android:name="ru.kostry.app.ui.view.FirstFragment"
        android:label="@string/label_first_fragment"
        tools:layout="@layout/fragment_first" >
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
        <action
            android:id="@+id/action_firstFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="ru.kostry.app.ui.view.SecondFragment"
        android:label="@string/label_second_fragment"
        tools:layout="@layout/fragment_second" >
        <action
            android:id="@+id/action_secondFragment_to_thirdFragment"
            app:destination="@id/thirdFragment" />
        <action
            android:id="@+id/action_secondFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/thirdFragment"
        android:name="ru.kostry.app.ui.view.ThirdFragment"
        android:label="@string/label_third_fragment"
        tools:layout="@layout/fragment_third" >
        <action
            android:id="@+id/action_thirdFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>