<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.FirstFragment">

    <data>

        <variable
            name="firstFragment"
            type="ru.kostry.app.view.FirstFragment" />

        <variable
            name="viewModel"
            type="ru.kostry.app.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_frg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/first_fragment_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/user_text(viewModel.myString.toString())}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="test text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_fragment_edit_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_fragment_edit_text"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toTopOf="@id/btn_next_first_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_fragment_number_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_next_first_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> firstFragment.buttonNextOnFirstFragment()}"
            android:text="@string/button_text_next"
            app:layout_constraintBottom_toTopOf="@id/btn_back_first_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_fragment_edit_text_field" />

        <Button
            android:id="@+id/btn_back_first_fragment"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> firstFragment.buttonBackOnFirstFragment()}"
            android:text="@string/back_to_main_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_next_first_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>